--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -4,19 +4,17 @@ publish_to: 'none'
 version: 1.0.0+5
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ^3.6.0
 
 dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
-  package_info: ^0.4.0+14
-  path_provider: ^1.6.5
-  permission_handler: ^5.0.0+hotfix.3
-  audioplayers: ^0.15.1
+
+  package_info: 
+  path_provider: 
+  permission_handler: 
+  audioplayers: 
 
 dev_dependencies:
   flutter_test:
